--- a/templates/home.html
+++ b/templates/home.html
@@ -15,17 +15,17 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="{{ url_for('home_page')}}">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
+                  <a class="nav-link" href="{{ url_for('about_page')}}">About</a>
               </li>
           </ul>
         </div>
       </nav>
 
       <div id="webTop">
-        <h1>Home Page</h1>
+        <h1>SHOPPING LISTS</h1>
       </div>
      
 
@@ -64,7 +64,8 @@
   <style>
     body {
       background-color: #212121;
-      color: white
+      color: white;
+      text-align: center;
     }
     #webTop{
         padding: 1rem;
