--- a/lists/templates/addlist.html
+++ b/lists/templates/addlist.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Shopping List - WebApp</title>
   </head>
-  <body>
+  <body class="text-center">
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <a class="navbar-brand">Shopping List - WebApp</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
@@ -17,20 +17,28 @@
               <li class="nav-item">
                   <a class="nav-link" href="{{ url_for('home_page')}}">Home </span></a>
               </li>
-              <li class="nav-item active">
-                  <a class="nav-link" href="{{ url_for('about_page')}}">About <span class="sr-only">(current)</a>
-              </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('addlist_page')}}">Add List </span></a>
-            </li>
+                  <a class="nav-link" href="{{ url_for('home_page')}}">About</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="{{ url_for('addlist_page')}}">Add List</a>
+              </li>
           </ul>
         </div>
       </nav>
 
-      <h1>About</h1>
+      <h1>Add List Page</h1>
       <br>
-      <h2>This WebApp was created for the recruitment at Atos in 2022.</h2>
-      <h2>By Igor Olszewski</h2>
+      
+      <div class="container">
+          <form method="POST" class="form-addlist" style="color: white;">
+           {{form.hidden_tag()}}
+            {{form.listname.label()}}
+            {{form.listname(class="form-control", placeholder=" List Name")}}
+            <br>
+            {{form.submit(class="btn btn-lg btn-block btn-primary")}}
+          </form>
+      </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
