but problem with lists

--- a/lists/templates/addlist.html
+++ b/lists/templates/addlist.html
@@ -18,7 +18,7 @@
                   <a class="nav-link" href="{{ url_for('home_page')}}">Home </span></a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="{{ url_for('home_page')}}">About</a>
+                  <a class="nav-link" href="{{ url_for('about_page')}}">About</a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="{{ url_for('addlist_page')}}">Add List</a>
