add items and lists no valid

--- a/lists/templates/about.html
+++ b/lists/templates/about.html
@@ -23,6 +23,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('addlist_page')}}">Add List </span></a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('additem_page')}}">Add Item</a>
+            </li>
           </ul>
         </div>
       </nav>
