--- a/lists/templates/additem.html
+++ b/lists/templates/additem.html
@@ -20,10 +20,10 @@
               <li class="nav-item">
                   <a class="nav-link" href="{{ url_for('about_page')}}">About</a>
               </li>
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('addlist_page')}}">Add List</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item active">
                 <a class="nav-link" href="{{ url_for('additem_page')}}">Add Item</a>
               </li>
           </ul>
@@ -35,9 +35,15 @@
       
       <div class="container">
           <form method="POST" class="form-addlist" style="color: white;">
-           {{form.hidden_tag()}}
-            {{form.listname.label()}}
-            {{form.listname(class="form-control", placeholder=" List Name")}}
+            {{form.hidden_tag()}}
+            {{form.itemname.label()}}
+            {{form.itemname(class="form-control", placeholder=" Item Name")}}
+            {{form.itemamount.label()}}
+            {{form.itemamount(class="form-control", placeholder=" Amount")}}
+            {{form.itempurchased.label()}}
+            {{form.itempurchased(class="form-control")}}
+            {{form.itemowner.label()}}
+            {{form.itemowner(class="form-control", placeholder=" ID of list")}}
             <br>
             {{form.submit(class="btn btn-lg btn-block btn-primary")}}
           </form>
