--- a/lists/templates/addlist.html
+++ b/lists/templates/addlist.html
@@ -26,6 +26,12 @@
               <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('additem_page')}}">Add Item</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('deleteitem_page')}}">Delete Item</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('deletelist_page')}}">Delete List</a>
+              </li>
           </ul>
         </div>
       </nav>
