--- a/lists/templates/deleteitem.html
+++ b/lists/templates/deleteitem.html
@@ -32,6 +32,12 @@
               <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('deletelist_page')}}">Delete List</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('changepurchased_page')}}">Change Purchased</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('editlist_page')}}">Edit List</a>
+              </li>
           </ul>
         </div>
       </nav>
