--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -32,6 +32,12 @@
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('deletelist_page')}}">Delete List</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('changepurchased_page')}}">Change Purchased</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('editlist_page')}}">Edit List</a>
+            </li>
           </ul>
         </div>
       </nav>
@@ -56,7 +62,7 @@
                     <td>{{ lists.id }}</td>
                     <td>{{ lists.name }}</td>
                     <td>
-                        <button class="btn btn-outline btn-info">Edit</button>
+                        <a href="{{ url_for('editlist_page')}}" class="btn btn-outline btn-info">Edit</a>
                         <button class="btn btn-outline btn-success" data-toggle="modal" data-target="#List-MoreInfo-{{ lists.id }}">Open</button>
                         <a href="{{ url_for('deletelist_page')}}" class="btn btn-outline btn-danger">Remove</a>
                     </td>
@@ -89,8 +95,7 @@
                   <td>{{ list.owner }}</td>
                   <td>
                       <a href="{{ url_for('deleteitem_page')}}" class="btn btn-outline btn-danger">Remove</a>
-                      <button class="btn btn-outline btn-success">Mark as purchased</button>
-                      <button class="btn btn-outline btn-info">Unmark as purchased</button>
+                      <a href="{{ url_for('changepurchased_page')}}" class="btn btn-outline btn-info">Change purchased</a>
                   </td>
               </tr>
           {% endfor %}
