everything except the open list

--- a/lists/templates/about.html
+++ b/lists/templates/about.html
@@ -15,37 +15,38 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mr-auto">
               <li class="nav-item">
-                  <a class="nav-link" href="{{ url_for('home_page')}}">Home </span></a>
+                  <a class="nav-link" href="{{ url_for('home_page')}}">HOME</span></a>
               </li>
               <li class="nav-item active">
-                  <a class="nav-link" href="{{ url_for('about_page')}}">About <span class="sr-only">(current)</a>
+                  <a class="nav-link" href="{{ url_for('about_page')}}">ABOUT<span class="sr-only">(current)</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('addlist_page')}}">Add List </span></a>
+                <a class="nav-link" href="{{ url_for('addlist_page')}}">ADD LIST</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('additem_page')}}">Add Item</a>
+              <a class="nav-link" href="{{ url_for('additem_page')}}">ADD ITEM</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('deleteitem_page')}}">Delete Item</a>
+              <a class="nav-link" href="{{ url_for('deleteitem_page')}}">DELETE ITEM</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('deletelist_page')}}">Delete List</a>
+              <a class="nav-link" href="{{ url_for('deletelist_page')}}">DELETE LIST</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('changepurchased_page')}}">Change Purchased</a>
+              <a class="nav-link" href="{{ url_for('changepurchased_page')}}">CHANGE PURCHASED</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('editlist_page')}}">Edit List</a>
+              <a class="nav-link" href="{{ url_for('editlist_page')}}">EDIT LIST</a>
             </li>
           </ul>
         </div>
       </nav>
 
-      <h1>About</h1>
+      <h1>ABOUT</h1>
       <br>
-      <h2>This WebApp was created for the recruitment at Atos in 2022.</h2>
-      <h2>By Igor Olszewski</h2>
+      <h2>THIS WEBAPP WAS CREATED FOR THE RCERUITMENT AT ATOS IN 2022.</h2>
+      <h2>THIS APPLICATION STILL LACKS PROTECTION AGAINST OPERATIONS ON NON-EXISTENT DATABASE ELEMENTS.</h2>
+      <h2>BY IGOR OLSZEWSKI</h2>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
