--- a/lists/templates/editlist.html
+++ b/lists/templates/editlist.html
@@ -15,34 +15,34 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mr-auto">
               <li class="nav-item">
-                  <a class="nav-link" href="{{ url_for('home_page')}}">Home </span></a>
+                  <a class="nav-link" href="{{ url_for('home_page')}}">HOME</span></a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="{{ url_for('about_page')}}">About</a>
+                  <a class="nav-link" href="{{ url_for('about_page')}}">ABOUT</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('addlist_page')}}">Add List</a>
+                <a class="nav-link" href="{{ url_for('addlist_page')}}">ADD LIST</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('additem_page')}}">Add Item</a>
+                <a class="nav-link" href="{{ url_for('additem_page')}}">ADD ITEM</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('deleteitem_page')}}">Delete Item</a>
+                <a class="nav-link" href="{{ url_for('deleteitem_page')}}">DELETE ITEM</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('deletelist_page')}}">Delete List</a>
+                <a class="nav-link" href="{{ url_for('deletelist_page')}}">DELETE LIST</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('changepurchased_page')}}">Change Purchased</a>
+                <a class="nav-link" href="{{ url_for('changepurchased_page')}}">CHANGE PURCHASED</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="{{ url_for('editlist_page')}}">Edit List</a>
+                <a class="nav-link" href="{{ url_for('editlist_page')}}">EDIT LIST</a>
               </li>
           </ul>
         </div>
       </nav>
 
-      <h1>Edit List Page</h1>
+      <h1>EDIT LIST PAGE</h1>
       <br>
       
       <div class="container">
