--- a/lists/templates/includes/list_modals.html
+++ b/lists/templates/includes/list_modals.html
@@ -15,7 +15,6 @@
           </button>
         </div>
         <div class="modal-body">
-          
           {% for list in list %}
           {{ list.id }}
           {{ list.name }}
@@ -25,7 +24,7 @@
           {% endfor %}
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">CLOSE</button>
         </div>
       </div>
     </div>
