--- a/lists/templates/additem.html
+++ b/lists/templates/additem.html
@@ -15,47 +15,47 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mr-auto">
               <li class="nav-item">
-                  <a class="nav-link" href="{{ url_for('home_page')}}">Home </span></a>
+                  <a class="nav-link" href="{{ url_for('home_page')}}">HOME</span></a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="{{ url_for('about_page')}}">About</a>
+                  <a class="nav-link" href="{{ url_for('about_page')}}">ABOUT</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('addlist_page')}}">Add List</a>
+                <a class="nav-link" href="{{ url_for('addlist_page')}}">ADD LIST</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="{{ url_for('additem_page')}}">Add Item</a>
+                <a class="nav-link" href="{{ url_for('additem_page')}}">ADD ITEM</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('deleteitem_page')}}">Delete Item</a>
+                <a class="nav-link" href="{{ url_for('deleteitem_page')}}">DELETE ITEM</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('deletelist_page')}}">Delete List</a>
+                <a class="nav-link" href="{{ url_for('deletelist_page')}}">DELETE LIST</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('changepurchased_page')}}">Change Purchased</a>
+                <a class="nav-link" href="{{ url_for('changepurchased_page')}}">CHANGE PURCHASED</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('editlist_page')}}">Edit List</a>
+                <a class="nav-link" href="{{ url_for('editlist_page')}}">EDIT LIST</a>
               </li>
           </ul>
         </div>
       </nav>
 
-      <h1>Add Item Page</h1>
+      <h1>ADD ITEM PAGE</h1>
       <br>
       
       <div class="container">
           <form method="POST" class="form-addlist" style="color: white;">
             {{form.hidden_tag()}}
             {{form.itemname.label()}}
-            {{form.itemname(class="form-control", placeholder=" Item Name")}}
+            {{form.itemname(class="form-control", placeholder=" ITEM NAME")}}
             {{form.itemamount.label()}}
-            {{form.itemamount(class="form-control", placeholder=" Amount")}}
+            {{form.itemamount(class="form-control", placeholder="AMOUNT")}}
             {{form.itempurchased.label()}}
             {{form.itempurchased(class="form-control")}}
             {{form.itemowner.label()}}
-            {{form.itemowner(class="form-control", placeholder=" ID of list")}}
+            {{form.itemowner(class="form-control", placeholder="ID OF LIST")}}
             <br>
             {{form.submit(class="btn btn-lg btn-block btn-primary")}}
           </form>
